test/compilable/imports/test8667a.d
module imports.test8667a;

void split(T)(T k)
if (is(T : int))
{
}
